# elf-printer

./: Cargo.toml  README.md
src/: elf_printer.rs  elf_viewer.rs  main.rs
src/elf_printer/: value_meanings.rs
src/elf_viewer/: value_meanings.rs
